ee/eki/KnabParser.java
// Generated from KnabParser.g4 by ANTLR 4.5.3
 package ee.eki; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KnabParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOM=1, KIRJESEP=2, KIRJEEND=3, LisaridaSep=4, ViiteridaSep=5, AmetlikRoopnimiSep=6, 
		LaiendSep=7, RoopnimedSep=8, IseloomustusSep=9, MorfoloogiaSep=10, EtymoloogiaSep=11, 
		GeotunnusedSep=12, AlaobjektidSep=13, YlaobjektidSep=14, LisaviitedSep=15, 
		AjaluguSep=16, KoostajaSep=17, NL=18, ALLIKAVIIDE=19, KOMMENTAAR=20, INFOMARGEND=21, 
		TEXT=22;
	public static final int
		RULE_kihelkond = 0, RULE_uldandmed = 1, RULE_kirjed = 2, RULE_kirje = 3, 
		RULE_pohirida = 4, RULE_lisarida = 5, RULE_jargread = 6, RULE_lisainfo = 7, 
		RULE_viiterida = 8, RULE_ametlikRoopnimi = 9, RULE_laiend = 10, RULE_roopnimed = 11, 
		RULE_iseloomustus = 12, RULE_morfoloogia = 13, RULE_etymoloogia = 14, 
		RULE_geotunnused = 15, RULE_alaobjektid = 16, RULE_ylaobjektid = 17, RULE_lisaviited = 18, 
		RULE_ajalugu = 19, RULE_koostaja = 20, RULE_text = 21, RULE_infomargend = 22, 
		RULE_allikaviide = 23, RULE_kommentaar = 24, RULE_sisu = 25, RULE_nl = 26;
	public static final String[] ruleNames = {
		"kihelkond", "uldandmed", "kirjed", "kirje", "pohirida", "lisarida", "jargread", 
		"lisainfo", "viiterida", "ametlikRoopnimi", "laiend", "roopnimed", "iseloomustus", 
		"morfoloogia", "etymoloogia", "geotunnused", "alaobjektid", "ylaobjektid", 
		"lisaviited", "ajalugu", "koostaja", "text", "infomargend", "allikaviide", 
		"kommentaar", "sisu", "nl"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\\uFEFF'", "'\r\n%\r\n'", "'\r\n!\r\n'", "'\r\n/'", "'\r\n>'", 
		"'\r\n='", "'\r\n$'", "'\r\n('", "'\r\n1'", "'\r\n2'", "'\r\n3'", "'\r\n4'", 
		"'\r\n5'", "'\r\n6'", "'\r\n7'", "'\r\n8'", "'\r\n9'", "'\r\n'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BOM", "KIRJESEP", "KIRJEEND", "LisaridaSep", "ViiteridaSep", "AmetlikRoopnimiSep", 
		"LaiendSep", "RoopnimedSep", "IseloomustusSep", "MorfoloogiaSep", "EtymoloogiaSep", 
		"GeotunnusedSep", "AlaobjektidSep", "YlaobjektidSep", "LisaviitedSep", 
		"AjaluguSep", "KoostajaSep", "NL", "ALLIKAVIIDE", "KOMMENTAAR", "INFOMARGEND", 
		"TEXT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KnabParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    /** Eemaldab tekstist esimese ja viimase tähemärgi. */
	    String chop(String text) {
	        return text.substring(1, text.length()-1);
	    }
	    /** Trükib teksti välja */
	    void print(String text) {
	        //System.out.print(text);
	    }

	public KnabParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class KihelkondContext extends ParserRuleContext {
		public UldandmedContext uldandmed() {
			return getRuleContext(UldandmedContext.class,0);
		}
		public KirjedContext kirjed() {
			return getRuleContext(KirjedContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KnabParser.EOF, 0); }
		public TerminalNode BOM() { return getToken(KnabParser.BOM, 0); }
		public LisainfoContext lisainfo() {
			return getRuleContext(LisainfoContext.class,0);
		}
		public KihelkondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kihelkond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterKihelkond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitKihelkond(this);
		}
	}

	public final KihelkondContext kihelkond() throws RecognitionException {
		KihelkondContext _localctx = new KihelkondContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_kihelkond);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_la = _input.LA(1);
			if (_la==BOM) {
				{
				setState(54);
				match(BOM);
				}
			}

			print("<kihelkond>\n");
			print("<üldandmed>");
			setState(59);
			uldandmed();
			print("</üldandmed>\n");
			setState(61);
			kirjed();
			setState(63);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << ALLIKAVIIDE) | (1L << KOMMENTAAR) | (1L << INFOMARGEND) | (1L << TEXT))) != 0)) {
				{
				setState(62);
				lisainfo();
				}
			}

			setState(65);
			match(EOF);
			print("</kihelkond>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UldandmedContext extends ParserRuleContext {
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public List<NlContext> nl() {
			return getRuleContexts(NlContext.class);
		}
		public NlContext nl(int i) {
			return getRuleContext(NlContext.class,i);
		}
		public UldandmedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uldandmed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterUldandmed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitUldandmed(this);
		}
	}

	public final UldandmedContext uldandmed() throws RecognitionException {
		UldandmedContext _localctx = new UldandmedContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_uldandmed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			print("<rida1>");
			setState(69);
			text();
			print("</rida1>\n");
			setState(71);
			nl();
			print("<rida2>");
			setState(73);
			text();
			print("</rida2>\n");
			setState(75);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KirjedContext extends ParserRuleContext {
		public List<KirjeContext> kirje() {
			return getRuleContexts(KirjeContext.class);
		}
		public KirjeContext kirje(int i) {
			return getRuleContext(KirjeContext.class,i);
		}
		public TerminalNode KIRJEEND() { return getToken(KnabParser.KIRJEEND, 0); }
		public List<TerminalNode> KIRJESEP() { return getTokens(KnabParser.KIRJESEP); }
		public TerminalNode KIRJESEP(int i) {
			return getToken(KnabParser.KIRJESEP, i);
		}
		public KirjedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kirjed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterKirjed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitKirjed(this);
		}
	}

	public final KirjedContext kirjed() throws RecognitionException {
		KirjedContext _localctx = new KirjedContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_kirjed);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			kirje();
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(78);
					match(KIRJESEP);
					setState(79);
					kirje();
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(85);
			match(KIRJEEND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KirjeContext extends ParserRuleContext {
		public PohiridaContext pohirida() {
			return getRuleContext(PohiridaContext.class,0);
		}
		public LisaridaContext lisarida() {
			return getRuleContext(LisaridaContext.class,0);
		}
		public JargreadContext jargread() {
			return getRuleContext(JargreadContext.class,0);
		}
		public KirjeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kirje; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterKirje(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitKirje(this);
		}
	}

	public final KirjeContext kirje() throws RecognitionException {
		KirjeContext _localctx = new KirjeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_kirje);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			print("<kirje>\n");
			setState(88);
			pohirida();
			setState(89);
			lisarida();
			setState(91);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ViiteridaSep) | (1L << AmetlikRoopnimiSep) | (1L << LaiendSep) | (1L << RoopnimedSep) | (1L << IseloomustusSep) | (1L << MorfoloogiaSep) | (1L << EtymoloogiaSep) | (1L << GeotunnusedSep) | (1L << AlaobjektidSep) | (1L << YlaobjektidSep) | (1L << LisaviitedSep) | (1L << AjaluguSep) | (1L << KoostajaSep))) != 0)) {
				{
				setState(90);
				jargread();
				}
			}

			print("</kirje>\n\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PohiridaContext extends ParserRuleContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public PohiridaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pohirida; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterPohirida(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitPohirida(this);
		}
	}

	public final PohiridaContext pohirida() throws RecognitionException {
		PohiridaContext _localctx = new PohiridaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pohirida);
		try {
			enterOuterAlt(_localctx, 1);
			{
			print("<põhirida>");
			setState(96);
			text();
			print("</põhirida>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LisaridaContext extends ParserRuleContext {
		public TerminalNode LisaridaSep() { return getToken(KnabParser.LisaridaSep, 0); }
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public LisaridaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lisarida; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterLisarida(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitLisarida(this);
		}
	}

	public final LisaridaContext lisarida() throws RecognitionException {
		LisaridaContext _localctx = new LisaridaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lisarida);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(LisaridaSep);
			print("<lisarida>");
			setState(101);
			text();
			print("</lisarida>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JargreadContext extends ParserRuleContext {
		public List<ViiteridaContext> viiterida() {
			return getRuleContexts(ViiteridaContext.class);
		}
		public ViiteridaContext viiterida(int i) {
			return getRuleContext(ViiteridaContext.class,i);
		}
		public List<AmetlikRoopnimiContext> ametlikRoopnimi() {
			return getRuleContexts(AmetlikRoopnimiContext.class);
		}
		public AmetlikRoopnimiContext ametlikRoopnimi(int i) {
			return getRuleContext(AmetlikRoopnimiContext.class,i);
		}
		public List<LaiendContext> laiend() {
			return getRuleContexts(LaiendContext.class);
		}
		public LaiendContext laiend(int i) {
			return getRuleContext(LaiendContext.class,i);
		}
		public List<RoopnimedContext> roopnimed() {
			return getRuleContexts(RoopnimedContext.class);
		}
		public RoopnimedContext roopnimed(int i) {
			return getRuleContext(RoopnimedContext.class,i);
		}
		public List<IseloomustusContext> iseloomustus() {
			return getRuleContexts(IseloomustusContext.class);
		}
		public IseloomustusContext iseloomustus(int i) {
			return getRuleContext(IseloomustusContext.class,i);
		}
		public List<MorfoloogiaContext> morfoloogia() {
			return getRuleContexts(MorfoloogiaContext.class);
		}
		public MorfoloogiaContext morfoloogia(int i) {
			return getRuleContext(MorfoloogiaContext.class,i);
		}
		public List<EtymoloogiaContext> etymoloogia() {
			return getRuleContexts(EtymoloogiaContext.class);
		}
		public EtymoloogiaContext etymoloogia(int i) {
			return getRuleContext(EtymoloogiaContext.class,i);
		}
		public List<GeotunnusedContext> geotunnused() {
			return getRuleContexts(GeotunnusedContext.class);
		}
		public GeotunnusedContext geotunnused(int i) {
			return getRuleContext(GeotunnusedContext.class,i);
		}
		public List<AlaobjektidContext> alaobjektid() {
			return getRuleContexts(AlaobjektidContext.class);
		}
		public AlaobjektidContext alaobjektid(int i) {
			return getRuleContext(AlaobjektidContext.class,i);
		}
		public List<YlaobjektidContext> ylaobjektid() {
			return getRuleContexts(YlaobjektidContext.class);
		}
		public YlaobjektidContext ylaobjektid(int i) {
			return getRuleContext(YlaobjektidContext.class,i);
		}
		public List<LisaviitedContext> lisaviited() {
			return getRuleContexts(LisaviitedContext.class);
		}
		public LisaviitedContext lisaviited(int i) {
			return getRuleContext(LisaviitedContext.class,i);
		}
		public List<AjaluguContext> ajalugu() {
			return getRuleContexts(AjaluguContext.class);
		}
		public AjaluguContext ajalugu(int i) {
			return getRuleContext(AjaluguContext.class,i);
		}
		public List<KoostajaContext> koostaja() {
			return getRuleContexts(KoostajaContext.class);
		}
		public KoostajaContext koostaja(int i) {
			return getRuleContext(KoostajaContext.class,i);
		}
		public JargreadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jargread; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterJargread(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitJargread(this);
		}
	}

	public final JargreadContext jargread() throws RecognitionException {
		JargreadContext _localctx = new JargreadContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jargread);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(117);
				switch (_input.LA(1)) {
				case ViiteridaSep:
					{
					setState(104);
					viiterida();
					}
					break;
				case AmetlikRoopnimiSep:
					{
					setState(105);
					ametlikRoopnimi();
					}
					break;
				case LaiendSep:
					{
					setState(106);
					laiend();
					}
					break;
				case RoopnimedSep:
					{
					setState(107);
					roopnimed();
					}
					break;
				case IseloomustusSep:
					{
					setState(108);
					iseloomustus();
					}
					break;
				case MorfoloogiaSep:
					{
					setState(109);
					morfoloogia();
					}
					break;
				case EtymoloogiaSep:
					{
					setState(110);
					etymoloogia();
					}
					break;
				case GeotunnusedSep:
					{
					setState(111);
					geotunnused();
					}
					break;
				case AlaobjektidSep:
					{
					setState(112);
					alaobjektid();
					}
					break;
				case YlaobjektidSep:
					{
					setState(113);
					ylaobjektid();
					}
					break;
				case LisaviitedSep:
					{
					setState(114);
					lisaviited();
					}
					break;
				case AjaluguSep:
					{
					setState(115);
					ajalugu();
					}
					break;
				case KoostajaSep:
					{
					setState(116);
					koostaja();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ViiteridaSep) | (1L << AmetlikRoopnimiSep) | (1L << LaiendSep) | (1L << RoopnimedSep) | (1L << IseloomustusSep) | (1L << MorfoloogiaSep) | (1L << EtymoloogiaSep) | (1L << GeotunnusedSep) | (1L << AlaobjektidSep) | (1L << YlaobjektidSep) | (1L << LisaviitedSep) | (1L << AjaluguSep) | (1L << KoostajaSep))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LisainfoContext extends ParserRuleContext {
		public List<NlContext> nl() {
			return getRuleContexts(NlContext.class);
		}
		public NlContext nl(int i) {
			return getRuleContext(NlContext.class,i);
		}
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public LisainfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lisainfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterLisainfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitLisainfo(this);
		}
	}

	public final LisainfoContext lisainfo() throws RecognitionException {
		LisainfoContext _localctx = new LisainfoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lisainfo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(121);
				nl();
				}
				break;
			}
			print("<lisainfo>");
			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(126);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALLIKAVIIDE) | (1L << KOMMENTAAR) | (1L << INFOMARGEND) | (1L << TEXT))) != 0)) {
					{
					setState(125);
					text();
					}
				}

				setState(128);
				nl();
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << ALLIKAVIIDE) | (1L << KOMMENTAAR) | (1L << INFOMARGEND) | (1L << TEXT))) != 0) );
			print("</lisainfo>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViiteridaContext extends ParserRuleContext {
		public TerminalNode ViiteridaSep() { return getToken(KnabParser.ViiteridaSep, 0); }
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public ViiteridaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_viiterida; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterViiterida(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitViiterida(this);
		}
	}

	public final ViiteridaContext viiterida() throws RecognitionException {
		ViiteridaContext _localctx = new ViiteridaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_viiterida);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(ViiteridaSep);
			print("<viiterida>");
			setState(137);
			text();
			print("</viiterida>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AmetlikRoopnimiContext extends ParserRuleContext {
		public TerminalNode AmetlikRoopnimiSep() { return getToken(KnabParser.AmetlikRoopnimiSep, 0); }
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public AmetlikRoopnimiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ametlikRoopnimi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterAmetlikRoopnimi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitAmetlikRoopnimi(this);
		}
	}

	public final AmetlikRoopnimiContext ametlikRoopnimi() throws RecognitionException {
		AmetlikRoopnimiContext _localctx = new AmetlikRoopnimiContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ametlikRoopnimi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(AmetlikRoopnimiSep);
			print("<ametlikrööpnimirida>");
			setState(142);
			text();
			print("</ametlikrööpnimirida>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LaiendContext extends ParserRuleContext {
		public TerminalNode LaiendSep() { return getToken(KnabParser.LaiendSep, 0); }
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public LaiendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_laiend; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterLaiend(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitLaiend(this);
		}
	}

	public final LaiendContext laiend() throws RecognitionException {
		LaiendContext _localctx = new LaiendContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_laiend);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(LaiendSep);
			print("<laiendirida>");
			setState(147);
			text();
			print("</laiendirida>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RoopnimedContext extends ParserRuleContext {
		public TerminalNode RoopnimedSep() { return getToken(KnabParser.RoopnimedSep, 0); }
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public RoopnimedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roopnimed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterRoopnimed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitRoopnimed(this);
		}
	}

	public final RoopnimedContext roopnimed() throws RecognitionException {
		RoopnimedContext _localctx = new RoopnimedContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_roopnimed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(RoopnimedSep);
			print("<rööpnimerida>");
			setState(152);
			text();
			print("</rööpnimerida>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IseloomustusContext extends ParserRuleContext {
		public TerminalNode IseloomustusSep() { return getToken(KnabParser.IseloomustusSep, 0); }
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public IseloomustusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iseloomustus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).enterIseloomustus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnabParserListener ) ((KnabParserListener)listener).exitIseloomustus(this);
		}
	}

	public final IseloomustusContext iseloomustus() throws RecognitionException {
		IseloomustusContext _localctx = new IseloomustusContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_iseloomustus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(IseloomustusSep);
			print("<iseloomustusrida>");
			setState(157);
			text();
			print("</iseloomustusrida>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
